tests/baselines/reference/classExpressionTest2.errors.txt
tests/cases/compiler/classExpressionTest2.ts(11,12): error TS2684: The 'this' context of type 'C<number>' is not assignable to method's 'this' of type 'C<X>'.
  Type 'number' is not assignable to type 'X'.
    'X' could be instantiated with an arbitrary type which could be unrelated to 'number'.


==== tests/cases/compiler/classExpressionTest2.ts (1 errors) ====
    function M() {
        var m = class C<X> {
            f<T>() {
                var t: T;
                var x: X;
                return { t, x };
            }
        }
    
        var v = new m<number>();
        return v.f<string>();
               ~
!!! error TS2684: The 'this' context of type 'C<number>' is not assignable to method's 'this' of type 'C<X>'.
!!! error TS2684:   Type 'number' is not assignable to type 'X'.
!!! error TS2684:     'X' could be instantiated with an arbitrary type which could be unrelated to 'number'.
    }